# pvms

./: CMakeLists.txt
lab01/: CMakeLists.txt  main.c
lab03/: CMakeLists.txt  main.c  результаты-полные.ods  результаты.csv
